WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260212
Fix and extend in-place interpreter OSR
https://bugs.webkit.org/show_bug.cgi?id=260212
Summary
Fix and extend in-place interpreter OSR
daniel_liu4
Reported
2023-08-15 11:34:01 PDT
Added epilogue OSR for the in-place interpreter, and fixed an issue where loop OSR did not trigger after the first loop iteration
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-15 11:34:18 PDT
<
rdar://problem/113919529
>
daniel_liu4
Comment 2
2023-08-15 11:36:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16712
EWS
Comment 3
2023-08-15 15:10:57 PDT
Committed
266927@main
(7cada1627710): <
https://commits.webkit.org/266927@main
> Reviewed commits have been landed. Closing PR #16712 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug