Fix and extend in-place interpreter OSR https://bugs.webkit.org/show_bug.cgi?id=260212 rdar://113919529

Reviewed by Yusuke Suzuki.

Fixed a bug where loop OSR did not trigger in the in-place interpreter after the first iteration because the PC was set to the instruction after the loop, rather than the loop itself. This resolves quicksort-wasm in JS2 performance issues locally.
Added epilogue OSR implementation to the in-place interpreter.

* Source/JavaScriptCore/llint/InPlaceInterpreter.asm:
* Source/JavaScriptCore/runtime/OptionsList.h:
* Source/JavaScriptCore/wasm/WasmIPIntGenerator.cpp:
(JSC::Wasm::IPIntGenerator::addLoop):
* Source/JavaScriptCore/wasm/WasmSlowPaths.cpp:
(JSC::LLInt::WASM_IPINT_EXTERN_CPP_DECL):
* Source/JavaScriptCore/wasm/WasmSlowPaths.h:

Canonical link: https://commits.webkit.org/266927@main